# discord-amibot

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  sample.env
.github/workflows/: ci.yml
amizone/: Cargo.toml  build.rs
amizone/proto/v1/: amizone.proto
amizone/src/: lib.rs
amizone/src/api/: client.rs  mod.rs  types.rs
amizone/src/api/user/: credentials.rs  mod.rs
bot/: Cargo.toml
bot/src/: callbacks.rs  error.rs  main.rs  util.rs
bot/src/commands/: attendance.rs  courses.rs  exam.rs  faculty_feedback.rs  help.rs  login.rs  logout.rs  meta.rs  mod.rs  profile.rs  schedule.rs
bot/src/commands/authentication/: login.rs  logout.rs
bot/src/commands/mac/: deregister.rs  info.rs  mod.rs  register.rs
src/: api.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/api/user/: credentials.rs  mod.rs
