[package]
name = "amibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11"
prost-types = "0.11.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[build-dependencies]
tonic-build = "0.9.2"
