[package]
name = "amibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11"
prost-types = "0.11.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = "0.21.0"
mongodb = "2.5.0"
serde = {version = "1.0.160", features = ['derive']}
futures = "0.3.28"
once_cell = "1.17.1"

[dev-dependencies]
dotenv = "0.15.0"
serde_json = "1.0.96"

[build-dependencies]
tonic-build = "0.9.2"
