[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amizone = { path = "../amizone"}
poise = "0.5.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.2"
chrono = {version = "0.4.24", features = ["clock"] }
shuttle-runtime = "0.21.0"
shuttle-poise = "0.21.0"
shuttle-secrets = "0.21.0"
anyhow = "1.0.71"
shuttle-shared-db = { version = "0.21.0", features = ["mongodb"] }
